// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`middlewares/simple should initialize 1`] = `
Object {
  "state": Object {},
}
`;

exports[`middlewares/simple should initialize with defaultData 1`] = `
Object {
  "state": "default",
}
`;

exports[`middlewares/simple should reset state 1`] = `
Object {
  "action": Object {
    "type": "@@krf/RESET>TESTPREFIX>TESTNAME",
  },
  "state": Object {},
}
`;

exports[`middlewares/simple should set element [elm2] 1`] = `
Object {
  "action": Object {
    "payload": Object {
      "code": "elm2",
      "infos": "elm2",
      "some": "other",
    },
    "type": "@@krf/SET>TESTPREFIX>TESTNAME",
  },
  "state": Object {
    "code": "elm2",
    "infos": "elm2",
    "some": "other",
  },
}
`;

exports[`middlewares/simple should take defaultData param to populate data field -init- 1`] = `
Object {
  "state": Object {},
}
`;

exports[`middlewares/simple should take defaultData param to populate data field -init- 2`] = `
Object {
  "state": Object {
    "im": "default",
  },
}
`;

exports[`middlewares/simple should take defaultData param to populate data field -init- 3`] = `
Object {
  "state": "",
}
`;

exports[`middlewares/simple should take defaultData param to populate data field -reset- 1`] = `
Object {
  "action": Object {
    "type": "@@krf/RESET>TESTPREFIX>TESTNAME",
  },
  "state": Object {
    "im": "default",
  },
}
`;

exports[`middlewares/simple should update element 1`] = `
Object {
  "action": Object {
    "payload": Object {
      "modifi": "cation",
      "some": "other 2",
    },
    "type": "@@krf/UPDATE>TESTPREFIX>TESTNAME",
  },
  "state": Object {
    "code": "elm",
    "infos": "elm",
    "modifi": "cation",
    "some": "other 2",
  },
}
`;
